--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-  <?xml version="1.0" encoding="UTF-8"?>
-    <!DOCTYPE html PUBLIC "-//WAPFORUM//DTD XHTML Mobile 1.0//EN" "http://www.wapforum.org/DTD/xhtml-mobile10.dtd">
+<!DOCTYPE html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-418681-48"></script>
@@ -12,70 +12,111 @@
 </script>
 <meta name="viewport" content="width=device-width; initial-scale=1.0;">
 <meta http-equiv="Content-Type" content="text/html;  charset=utf-8">
-<title>Instant Same Day Payday Loans Online California</title>
-<Meta name="description" Content="" />
-<meta name="keywords" content=" " />
+<title>Loan Online</title>
 <link rel="canonical" href="https://www.loanonline.us/">
-<link rel="stylesheet" type="text/css" href="style1.css">
- </head>
+<style>
+@media screen and (min-width: 490px){
+ body {
+   background-image:url(360_07.png);
+   margin: 0px;
+  }
+.block0 {
+width: 824px;
+height: 315px;
+background-image: url('loans.jpg');
+}
+   table {
+    width: 824px; 
+    border: 10px solid #808080; /* Граница вокруг таблицы */
+   }
+.center {
+  margin-left: auto;
+  margin-right: auto;
+}
+IMG.displayed {
+    display: block;
+    margin-left: auto;
+    margin-right: auto }
+}
+@media screen and (max-width: 480px)  {
+ body {
+   background-image:url(360_07.png);
+   margin: 0px;
+  }
+.block0 {
+width: 320px;
+height: 122px;
+background-image: url('loans.jpg');
+}
+   table {
+    width: 320px; 
+    border: 10px solid #808080; /* Граница вокруг таблицы */
+   }
+.center {
+  margin-left: auto;
+  margin-right: auto;
+}
+IMG.displayed {
+    display: block;
+    margin-left: auto;
+    margin-right: auto }
+}
+</style>
+</head>
 
 <body>
-<h1>Instant Same Day Payday Loans Online California</h1>
-<div id="parent">
-  <div class="block">
-    <a href="https://loansolo.com/?aid=7378"><img src="loansolo.png" width="300" height="250" alt="Instant Same Day Payday Loans Online California">
-	</a></div>
-  <div class="block1">
-    &nbsp; Instant same-day payday loans online in California allow consumers to 
-	borrow up to $1000, depending on their state’s regulations and the 
-	consumer’s monthly income. Payday loans are designed to be short-term loans, 
-	helping complete a financial crisis until the next payday. Online payday 
-	loan companies add convenience to the process.<br>
-	<br>
-	PAYDAY LOAN Process<br><p><a href="https://loansolo.com/?aid=7378">Apply a Loan Online Click Here</a></p>
-	<br>
-	Once you&#39;ve found an online payday loan company, you&#39;ll need to fill out an 
-	application that includes your contact information and monthly income. You 
-	will also need to work through a repayment plan. If you use a traditional 
-	payday loan store, you will need to create a postdated check that the lender 
-	supports. Payday loan companies will deduct the payment from your bank 
-	checking account automatically.<br>
-	<br>
-	When your application has been submitted and approved, you will receive your 
-	money advance. A traditional lender will issue you a check, while online 
-	companies line the cash to your bank checking account. Your repayment will 
-	be anticipated in the next short term, or you can prolong the loan for 
-	longer by paying additional fees.<br>
-	<br>
-	Payday Fees<br>
-	<br>
-	Payday loan lenders demand fees exactly like any financing company. Fees 
-	include a process cost and interest. To make comparability shopping easy, 
-	the federal government requires lenders to create an APR, including fees and 
-	interest. This is actually the rate you&#39;ll pay if you kept the loan out for 
-	a whole year.<br>
-	<br>
-	If you compare the APR of an online payday loan to a home loan, you will 
-	notice an enormous difference. However, payday loans are only intended to be 
-	taken for a couple of days, which means that your actual fees will be lower. 
-	The APR is still a good way to compare payday companies to find the best 
-	package.<br>
-	<br>
-	Online Payday Loan Lenders<br>
-	<br>
-	Instant same-day payday loans lenders online in California follow yet 
-	guidelines as traditional lenders, however, they enable you to apply anytime 
-	for an advance loan. They also copy your cash electronically, which means 
-	you don’t have to hassle with assessments and vacations to the bank.<br>
-	<br>
-	Some online lenders also offer better discounts, especially for first-time 
-	borrowers. They could waive fees or offer reduced rates. It pays to look at 
-	several different websites to find the most affordable fees for your money 
-	advance.<br>
-		<p><a href="https://loansolo.com/?aid=7378">Apply a Loan Online Click Here</a></p>
-	</div>
- 
-</div>
+
+<table class="center">
+	<tr>
+		<td> <div class="block0">
+</div><hr>
+<p><a href="https://loansolo.com/?aid=7378">
+<img class="displayed" src="loansolo.png" width="300" height="250"></a></p><hr>
+<p><a href="https://extralend.com/?aid=7378">
+<img  class="displayed" src="extralend.jpg" width="300" height="250"></a></p>
+
+<p>Apply For A Loan<br>
+<br>
+Once in a while, we have taken away a bank loan for just one reason or another. 
+It seems to be a part of modern life, as everyone I know has got a loan. We just 
+get one loan paid off, have a limited period of sense smug and then find that 
+people need to use for financing again. This may be to consolidate bad debts, 
+purchase home advancements or buy an automobile. We also got one out to place 
+our daughter through university or college.<br>
+<br>
+It isn't the actual loan that bothers me, I've accepted it as a means of life, 
+it is the process you have to undergo to get one. Perhaps our parent's 
+technology got the right idea. They wouldn't want to obtain a loan. If they 
+couldn't find the money for something, they simply kept up until that they had 
+enough money. My technology does not have the patience to wait. So, we must leap 
+through the hoops whenever we want one.<br>
+<br>
+I always feel just like a gathering with the bank manager is similar to going to 
+the top Teacher's office. Personally, I think guilty but I don't know what I 
+sense guilty about. The director is always correctly friendly and helpful but I 
+still feel just like I'm in the dentist's ready room. Maybe, it is because of 
+some Protestant work ethic instilled in me by my parents. WHENEVER I obtain a 
+loan, I'm requesting money I haven't earned. Obviously, I know this is the 
+one-way banks make their revenue and the complete banking system would collapse 
+if it were not for folks like me.<br>
+<br>
+I hate filling in forms and the same forms come around, again and again, asking 
+the same questions. Every time we obtain a loan, we have to prove id, even 
+though we have been going to the same branch of our standard bank for years. 
+They need to execute a credit check on us. Ironically, we've friends who have 
+been refused to finance because they have no credit rating. They may have good 
+jobs and may easily spend the money for repayments, but asking for a loan for 
+the very first time means that you have no credit score to be assessed. We've 
+plenty of history! The worst thing, whenever we apply for a loan, is those ten 
+minutes approximately whenever we are remaining alone at work whilst the 
+administrator pops out to do all the checks. We've never been refused but almost 
+always there is a first time. It's wintry perspire time as he comes home into 
+the room. It's ok! He's smiling and we don't have to do that again, until the 
+next time.</p>
+</td>
+	</tr>
+</table>
+
 </body>
 
 </html>
