--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@ IMG.displayed {
     margin-left: auto;
     margin-right: auto }
 }
+ .link {
+    font-family: Verdana, Arial, Helvetica, sans-serif; 
+    font-size: 24pt;
+text-align: center 
+   }
 @media screen and (max-width: 480px)  {
  body {
    background-image:url(bg.gif);
@@ -80,6 +85,8 @@ IMG.displayed {
 	<tr>
 		<td> <div class="block0">
 </div><hr>
+<p  class="link"><a href="https://www.loanonline.us/payday/">Apply Payday Loan Click Here</a></p><br>
+<p  class="link"><a href="https://www.loanonline.us/installment/">Apply Installment Loan Click Here</a></p><br>
 <p><a href="https://loansolo.com/?aid=7378">
 <img class="displayed" src="loansolo.png" width="300" height="250"></a></p><hr>
 <p><a href="https://extralend.com/?aid=7378">
