--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@ text-align: center
 	<tr>
 		<td> <div class="block0">
 </div><hr>
-<p  class="link"><a href="https://www.loanonline.us/payday/">Apply Payday Loan Click Here</a></p><hr>
-<p  class="link"><a href="https://www.loanonline.us/installment/">Apply Installment Loan Click Here</a></p><hr>
-<p><a href="https://loansolo.com/?aid=7378">
+<p  class="link"><a href="https://www.loanonline.us/payday/" rel="nofollow">Apply Payday Loan Click Here</a></p><hr>
+<p  class="link"><a href="https://www.loanonline.us/installment/" rel="nofollow">Apply Installment Loan Click Here</a></p><hr>
+<p><a href="https://loansolo.com/?aid=7378" rel="nofollow">
 <img class="displayed" src="loansolo.png" width="300" height="250"></a></p><hr>
-<p><a href="https://extralend.com/?aid=7378">
+<p><a href="https://extralend.com/?aid=7378" rel="nofollow">
 <img  class="displayed" src="extralend.jpg" width="300" height="250"></a></p><hr>
 
 <p><h1>Apply Loans Online</h1><br>
