--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@ text-align: center
 	<tr>
 		<td> <div class="block0">
 </div><hr>
-<p  class="link"><a href="https://loansolo.com/?aid=7378" rel="nofollow">Apply Payday Loan Click Here</a></p><hr>
-<p  class="link"><a href="https://extralend.com/?aid=7378" rel="nofollow">Apply Installment Loan Click Here</a></p><hr>
-<p><a href="https://loansolo.com/?aid=7378" rel="nofollow">
+<p  class="link"><a href="https://loansolo.com/?aid=7378" rel="nofollow" target="_blank">Apply Payday Loan Click Here</a></p><hr>
+<p  class="link"><a href="https://extralend.com/?aid=7378" rel="nofollow" target="_blank">Apply Installment Loan Click Here</a></p><hr>
+<p><a href="https://loansolo.com/?aid=7378" rel="nofollow" target="_blank">
 <img class="displayed" src="loansolo.png" width="300" height="250"></a></p><hr>
-<p><a href="https://extralend.com/?aid=7378" rel="nofollow">
+<p><a href="https://extralend.com/?aid=7378" rel="nofollow" target="_blank">
 <img  class="displayed" src="extralend.jpg" width="300" height="250"></a></p><hr>
 
 <p><h1>Apply Loans Online</h1><br>
