--- a/installment/index.html
+++ b/installment/index.html
@@ -10,6 +10,7 @@
 
   gtag('config', 'UA-418681-48');
 </script>
+<script type="text/javascript">    var _lg_track_init_ = {aid: 7378}</script><script type="text/javascript" async="true" src="https://loansaccount.com/form/track.js"></script>
     <meta charset="utf-8"/>
     <meta name="ROBOTS" content="NOINDEX, NOFOLLOW"/>
     <title>Online Personal Loans up to $3,000</title>
@@ -70,7 +71,7 @@
         <div class="form-wrap">
             <div class="form-text">
                 <span class="online-cash">
-                    Online Personal Loans up to $3,000
+                    Online Personal Loans up to $5,000
                 </span>
                 <span class="get-started">Start Your Online Form</span>
                 
@@ -80,22 +81,11 @@
                     <div class="form-row">
                         <span class="custome-select-wrap js_element_error">
                             <select class="custome-select" name="requested_amount" id="sa">
-                                <option value="200">200</option>
-                                <option value="400">400</option>
-                                <option value="600">600</option>
-                                <option value="800">800</option>
-                                <option value="1000" selected="selected">1000</option>
-                                <option value="1200">1200</option>
-                                <option value="1400">1400</option>
-                                <option value="1600">1600</option>
-                                <option value="1800">1800</option>
-                                <option value="2000">2000</option>
-                                <option value="2200">2200</option>
-                                <option value="2400">2400</option>
-                                <option value="2600">2600</option>
-                                <option value="2800">2800</option>
-                                <option value="3000">3000</option>
-                            </select>
+                                <option value="200">$200-$500</option>
+  <option value="500">$500-$1000</option>
+          <option value="1000" selected="selected">$1000-$2500</option>
+                  <option value="2500">$2,500-$5,000</option>
+</select>
                         </span>
                         <span class="js_element_error">
                             <input id="sz" size="5" maxlength="5" name="zip" type="text" placeholder="ZIP" tabindex="2"/>
