--- a/electrician.html
+++ b/electrician.html
@@ -4,7 +4,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Freelancing</title>
+<title>Electrician a free estimate</title>
 <Meta name="description" Content="" />
 <meta name="keywords" content="" />
 <link rel="canonical" href="https://www.homeservice.pp.ua/">
@@ -30,17 +30,14 @@ document.write(unescape("%3Cscript src='"+po_host+"leads.leadsmartinc.com/js/emb
 <div class="block0">
 <div class="block1">
 <div class="block1_2">
-<p class="center"><div id="polyares_form_container" style="margin:0px;padding:0px;"><div id="polyares_form" style="width: 244px; height: 377px;"><iframe src="//leads.leadsmartinc.com/?api_key=eccf565586cda416df8b89f66df641fee9a1bcb8&affiliate_source=viacheslav1&funnel=5&category=10&buttons=btn-success" height="100%" width="100%" frameborder="no" scrolling="yes" noresize="true" vspace="0" hspace="0" style="border-radius: 10px; border: 1px solid #333;"></iframe></div></div></p>
+We connect you with your local electrician. Fill out the form and get a free estimate now.
+<p class="center"><div id="polyares_form_container" style="margin:35px;padding:0px;"><div id="polyares_form" style="width: 244px; height: 377px;"><iframe src="//leads.leadsmartinc.com/?api_key=eccf565586cda416df8b89f66df641fee9a1bcb8&affiliate_source=viacheslav1&funnel=5&category=10&buttons=btn-success" height="100%" width="100%" frameborder="no" scrolling="yes" noresize="true" vspace="0" hspace="0" style="border-radius: 10px; border: 1px solid #333;"></iframe></div></div></p>
 </div>
 </div>
 <div class="block2">
 <p align="left">
-<br>
 <img border="0" src="electrician.jpg" width="100%">
-
-
 </p>
-<br>
 </div>
 </div>
 <div class="footer"><nav>
