--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <!doctype html>
 <html lang=en>
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8SSCP030RY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8SSCP030RY');
+</script>
   <title>
-    
+ 
       www.fastloan.site
     
   </title>
