--- a/virtualna-kartka.html
+++ b/virtualna-kartka.html
@@ -13,8 +13,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
 <title>Віртуальна картка з кредитним лімітом: Усе, що вам потрібно знати</title>
-<Meta name="description" Content="" >
-<meta name="keywords" content="" >
+<Meta name="description" Content="У сучасному світі фінансові інновацій однією з них є віртуальна картка з кредитним лімітом, вона стала невід'ємною частиною нашого життя." >
+<meta name="keywords" content="Віртуальна картка з кредитним лімітом," >
 <link rel="canonical" href="https://www.kartka.pp.ua/virtualna-kartka.html">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" >
 <link rel="stylesheet" type="text/css" href="style.css">
