--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <title>Банківські картки</title>
 <Meta name="description" Content="" >
 <meta name="keywords" content="" >
-<link rel="canonical" href="https://www.kartka.pp.ua/">
+<link rel="canonical" href="https://kartka.pp.ua/">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" >
 <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
